...
                label: 'See results',
                secondary: true,
                onPressed: () => _open(context, ReviewScreen(attemptId: quiz.attemptId!)),
              ),
            ] else
              BigButton(
                label: quiz.status == MyQuizStatus.newQuiz ? 'Start' : 'Continue',
                onPressed: () => _open(context, QuizScreen(quizId: quiz.quizId)),
              ),
          ],
        ),
      ),
    );
...
